src/objects/Sync1__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync1Email__c</fullName>
        <label>Sync1Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sync1Phone__c</fullName>
        <label>Sync1Phone</label>
        <type>Phone</type>
    </fields>
    <label>Sync1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sync1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>